--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,94 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2020-11-16 17:29:58 +0100 
+%% Created for Mugagroup at 2021-01-08 11:19:39 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bruzewicz2019,
+	author = {Bruzewicz,Colin D. and Chiaverini,John and McConnell,Robert and Sage,Jeremy M.},
+	date-added = {2021-01-08 11:11:23 +0100},
+	date-modified = {2021-01-08 11:11:23 +0100},
+	doi = {10.1063/1.5088164},
+	journal = {Applied Physics Reviews},
+	number = {2},
+	pages = {021314},
+	title = {Trapped-ion quantum computing: Progress and challenges},
+	url = {https://doi.org/10.1063/1.5088164},
+	volume = {6},
+	year = {2019},
+	Bdsk-Url-1 = {https://doi.org/10.1063/1.5088164}}
+
+@incollection{Ma2019,
+	abstract = {Thermal rectification is a phenomenon where the heat current is different when the temperature bias across a structure is reversed in direction. Thermal rectifiers, materials, or structures that can generate thermal rectification, are viewed as promising candidates for thermal management solutions or thermal signal processing. In this chapter, we discuss the research background on thermal rectification and common mechanisms based on which thermal rectification is generated. We focus on thermal rectifiers based on carbon nanomaterials, such as carbon nanotubes as well as nanoribbons, nanowiggles, or nanomeshes of graphene. Despite the great challenge in fabricating thermal rectifiers based on delicate nanostructures as predicted by modeling and simulations, the research on thermal rectifiers based on carbon materials are promising because of the large variety of carbon allotropes.},
+	author = {Tengfei Ma and Yan Wang},
+	booktitle = {Carbon Based Nanomaterials for Advanced Thermal and Electrochemical Energy Storage and Conversion},
+	date-added = {2021-01-08 11:11:23 +0100},
+	date-modified = {2021-01-08 11:11:23 +0100},
+	doi = {https://doi.org/10.1016/B978-0-12-814083-3.00005-6},
+	editor = {Rajib Paul and Vinodkumar Etacheri and Yan Wang and Cheng-Te Lin},
+	isbn = {978-0-12-814083-3},
+	keywords = {Thermal rectification, thermal rectifier, thermal conductivity, graphene, carbon nanotube, thermal diode, thermal management, thermal signal processing, molecular dynamics},
+	pages = {103 - 119},
+	publisher = {Elsevier},
+	series = {Micro and Nano Technologies},
+	title = {Chapter 5 - Carbon nanomaterials for thermal rectification},
+	url = {http://www.sciencedirect.com/science/article/pii/B9780128140833000056},
+	year = {2019},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/B9780128140833000056},
+	Bdsk-Url-2 = {https://doi.org/10.1016/B978-0-12-814083-3.00005-6}}
+
+@article{Riera-Campeny2019,
+	author = {Riera-Campeny, Andreu and Mehboudi, Mohammad and Pons, Marisa and Sanpera, Anna},
+	date-added = {2021-01-08 11:11:23 +0100},
+	date-modified = {2021-01-08 11:11:23 +0100},
+	doi = {10.1103/PhysRevE.99.032126},
+	issue = {3},
+	journal = {Phys. Rev. E},
+	month = {Mar},
+	numpages = {10},
+	pages = {032126},
+	publisher = {American Physical Society},
+	title = {Dynamically induced heat rectification in quantum systems},
+	url = {https://link.aps.org/doi/10.1103/PhysRevE.99.032126},
+	volume = {99},
+	year = {2019},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevE.99.032126}}
+
+@article{Segal2005,
+	author = {Segal, Dvira and Nitzan, Abraham},
+	date-added = {2021-01-08 11:11:23 +0100},
+	date-modified = {2021-01-08 11:11:23 +0100},
+	doi = {10.1103/PhysRevLett.94.034301},
+	issue = {3},
+	journal = {Phys. Rev. Lett.},
+	month = {Jan},
+	numpages = {4},
+	pages = {034301},
+	publisher = {American Physical Society},
+	title = {Spin-Boson Thermal Rectifier},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.94.034301},
+	volume = {94},
+	year = {2005},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.94.034301},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.94.034301}}
+
+@article{Segal2005b,
+	author = {Segal,Dvira and Nitzan,Abraham},
+	date-added = {2021-01-08 11:11:23 +0100},
+	date-modified = {2021-01-08 11:11:23 +0100},
+	doi = {10.1063/1.1900063},
+	journal = {The Journal of Chemical Physics},
+	number = {19},
+	pages = {194704},
+	title = {Heat rectification in molecular junctions},
+	url = {https://doi.org/10.1063/1.1900063},
+	volume = {122},
+	year = {2005},
+	Bdsk-Url-1 = {https://doi.org/10.1063/1.1900063}}
 
 @article{Bakr2009,
 	abstract = {A new quantum gas microscope that bridges the gap between microscopic and macroscopic approaches to the study of quantum systems has been developed. It uses high-resolution optical imaging to detect single atoms held in a holographically generated optical lattice. Its potential is demonstrated by the production of images of single rubidium atoms confined to an optical lattice with spacings of just 640 nanometres between atoms. The approach should facilitate quantum simulation of condensed-matter systems and find possible application in addressing and read-out of large-scale quantum information systems based on ultracold atoms.},
