First version of the intro chapter

--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2021-01-08 11:19:39 +0100 
+%% Created for Mugagroup at 2021-01-18 18:12:44 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inbook{Saleh1991,
+	author = {Saleh, B.E.A and Teich, M.C.},
+	chapter = {6},
+	date-added = {2021-01-18 17:56:37 +0100},
+	date-modified = {2021-01-18 17:58:15 +0100},
+	pages = {233-234},
+	publisher = {Wiley},
+	title = {Fundamentals of photonics},
+	year = {1991}}
+
+@inbook{Yariv1984,
+	author = {Yariv, E. and Yeh, P.},
+	chapter = {4},
+	date-added = {2021-01-18 16:24:52 +0100},
+	date-modified = {2021-01-18 16:30:38 +0100},
+	pages = {103},
+	publisher = {Wiley},
+	title = {Optical waves in crystals: propagation and control of laser radiation},
+	year = {1984}}
 
 @article{Bruzewicz2019,
 	author = {Bruzewicz,Colin D. and Chiaverini,John and McConnell,Robert and Sage,Jeremy M.},
