--- a/Thesis.tex
+++ b/Thesis.tex
@@ -27,10 +27,6 @@
 
 \def\la{\langle}
 \def\ra{\rangle}
-% \def\beq{\begin{equation}}
-% \def\eeq{\end{equation}}
-% \def\beqa{\begin{eqnarray}}
-% \def\eeqa{\end{eqnarray}}
 \def\blankpage{
 \newpage
 \begin{equation}
@@ -82,10 +78,10 @@
 % ------------------ The "Funny Quote Page" --------------------------------------------------------
 \pagestyle{empty}  % No headers or footers for the following pages
 
+\includegraphics{Figures/Honest_Work.jpg}
 \null\vfill
 % Now comes the "Funny Quote", written in italics
-\textit{``Insert deep/meaningful/clever quote by someone who you admire or hate''}
-
+\textit{``It ain't much, but it`s honest work.''}
 \begin{flushright}
   Someone who you admire or hate
 \end{flushright}
@@ -119,7 +115,9 @@
 % ------------------ The Acknowledgements page, for thanking everyone ------------------------------
 \acknowledgements{
 \addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
-Do not forget about the people that has been by your side and supported you.
+
+Escribir una tesis no es tarea f\'{a}cil en general, y mucho menos en estos tiempos tan oscuros de la pandemia de COVID-19. En estos momentos m\'{a}s que nunca es vital estar rodeado de personas maravillosas que te apoyen y con las que compartir penas y alegrías. A la primera persona que tengo que nombrar en esta tesis es a ti, mi querida Cecilia. Sin ti, yo este año no habría sido capaz de seguir adelante durante los meses de encierro y teletrabajo. Has hecho que todos y cada uno de los segundos en nuestra oficina se llenen de luz y de color.
+
 \it{Esta Tesis ha sido financiada a trav\'es de una beca predoctoral concedida por el Gobierno Vasco/Eusko Jaurlaritza}
 }
 
