First version of Intro to part II

--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2021-01-18 18:12:44 +0100 
+%% Created for Mugagroup at 2021-01-24 11:35:33 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inbook{Neamen2003,
+	author = {Neamen, D.A},
+	chapter = {7},
+	date-added = {2021-01-24 11:32:23 +0100},
+	date-modified = {2021-01-24 11:35:05 +0100},
+	edition = {3},
+	pages = {238-239},
+	publisher = {McGraw Hill},
+	title = {Semiconductor Physics and Devices: Basic Principles},
+	year = {2003}}
 
 @inbook{Saleh1991,
 	author = {Saleh, B.E.A and Teich, M.C.},
