--- a/Thesis.tex
+++ b/Thesis.tex
@@ -177,6 +177,7 @@ Escribir una tesis no es tarea f\'{a}cil en general, y mucho menos en estos tiem
 
 % ------------ PART II: Heat Rectification ---------------------------------------------------------
 \part{Heat rectification in mesoscopic systems}
+\input{./Chapters/IntroductionPartII}
 \input{./Chapters/Chapter4}    % Heat Rectification with local impurities
 \input{./Chapters/Chapter5}    % Heat Rectification in graded chains of trapped ions
 \input{./Chapters/Chapter6}    % Rectification in a minimal model
