First Version of chapters 5 and 6. First version of part II

--- a/Publications.tex
+++ b/Publications.tex
@@ -30,20 +30,13 @@
   {\it Symmetries of (${N \times N}$ ) non-Hermitian Hamiltonian matrices}\\
   \href{https://doi.org/10.1088/1751-8121/ab7781}{J. Phys. A: Math. Theor. {\bf 53}, 135304 (2020).}
 
-\end{enumerate}
-
-\section*{Preprints}
-
-\begin{enumerate}
-
   \item A. Ruschhaupt, A. Kiely, {\bf M. A. Sim\'{o}n} and J. G. Muga\\
   {\it Quantum-optical implementation of non-Hermitian potentials for asymmetric scattering}\\
-  \href{https://arxiv.org/abs/2008.01702}{arXiv:2008.01702 [quant-ph] (2020)}\\
-  (\href{https://journals.aps.org/pra/accepted/2f07eYb5Ibe1ea6603ef59232d2f3864c12b1a62d}{Accepted for publication in Phys. Rev. A})
+  \href{https://doi.org/10.1103/PhysRevA.102.053705}{Phys. Rev. A {\bf 102}, 053705 (2020).}\\
 
   \item {\bf M. A. Sim\'{o}n}, A. Alaña, M. Pons, A. Ruiz-Garc\'{i}a and J. G. Muga\\
   {\it Heat rectification with a minimal model of two harmonic oscillators}\\
-  \href{https://arxiv.org/abs/2010.10432}{arXiv:2010.10432 [cond-mat.stat-mech] (2020)}
+  \href{https://doi.org/10.1103/PhysRevE.103.012134}{Phys. Rev. E {\bf 103}, 012134 (2021).}
 
 \end{enumerate}
 
