--- a/Thesis.tex
+++ b/Thesis.tex
@@ -78,7 +78,7 @@
 % ------------------ The "Funny Quote Page" --------------------------------------------------------
 \pagestyle{empty}  % No headers or footers for the following pages
 
-\includegraphics{Figures/Honest_Work.jpg}
+% \includegraphics{Figures/Honest_Work.jpg}
 \null\vfill
 % Now comes the "Funny Quote", written in italics
 \textit{``It ain't much, but it`s honest work.''}
@@ -116,7 +116,7 @@
 \acknowledgements{
 \addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
 
-Escribir una tesis no es tarea f\'{a}cil en general, y mucho menos en estos tiempos tan oscuros de la pandemia de COVID-19. En estos momentos m\'{a}s que nunca es vital estar rodeado de personas maravillosas que te apoyen y con las que compartir penas y alegrías. A la primera persona que tengo que nombrar en esta tesis es a ti, mi querida Cecilia. Sin ti, yo este año no habría sido capaz de seguir adelante durante los meses de encierro y teletrabajo. Has hecho que todos y cada uno de los segundos en nuestra oficina se llenen de luz y de color.
+% Escribir una tesis no es tarea f\'{a}cil en general, y mucho menos en estos tiempos tan oscuros de la pandemia de COVID-19. En estos momentos m\'{a}s que nunca es vital estar rodeado de personas maravillosas que te apoyen y con las que compartir penas y alegrías. A la primera persona que tengo que nombrar en esta tesis es a ti, mi querida Cecilia. Sin ti, yo este año no habría sido capaz de seguir adelante durante los meses de encierro y teletrabajo. Has hecho que todos y cada uno de los segundos en nuestra oficina se llenen de luz y de color.
 
 \it{Esta Tesis ha sido financiada a trav\'es de una beca predoctoral concedida por el Gobierno Vasco/Eusko Jaurlaritza}
 }
@@ -169,9 +169,9 @@ Escribir una tesis no es tarea f\'{a}cil en general, y mucho menos en estos tiem
 \part{Non-hermitian systems and asymmetric scattering}
 \input{./Chapters/Chapter1}    % Asymmetric scattering by non-Hermitian potentials
 \input{./Chapters/Chapter2}    % Symmetries of non-hermitian potentials
-  \input{./Chapters/ChapterSymAndInvariants}        %Invariants of non-h Hamiltonians
-  \input{./Chapters/ChapterRealEigenValues}         %complex plane symmetries of nh Hamiltonians
-  \input{./Chapters/ChapterDiscreteNNSymmetries}    %Discrete Hamiltonian symmetries
+  % \input{./Chapters/ChapterSymAndInvariants}        %Invariants of non-h Hamiltonians
+  % \input{./Chapters/ChapterRealEigenValues}         %complex plane symmetries of nh Hamiltonians
+  % \input{./Chapters/ChapterDiscreteNNSymmetries}    %Discrete Hamiltonian symmetries
 \input{./Chapters/Chapter3}    % Physical Implementation of non-hermitian and non-local hamiltonians
 
 
