--- a/Appendices/Appendix_SeparablePotentials.tex
+++ b/Appendices/Appendix_SeparablePotentials.tex
@@ -32,11 +32,9 @@ where $G_{0}(E)=(E-H_{0})^{-1}$ is the Green's operator for free motion. Solving
 %
 %
 \section{$S$-matrix eigenvalues}
+\label{Appendix:SeparablePotentials_AmplitudesAndEigenvaluesofS}
 %
-%
-%
-%
-The eigenvalues for the S-matrix are given by Eq. \eqref{Sform} in terms of the reflection and transmission amplitudes. For a separable potential, using Eq. \eqref{art}, we can simplify the transmission and reflection coefficients as
+The eigenvalues for the S-matrix are given by Eq. \eqref{eq:chapter2_SEigenvalues} in terms of the reflection and transmission amplitudes. For a separable potential, using Eq. \eqref{eq:chapter1_amplitudesFromTOperator}, we can simplify the transmission and reflection coefficients as
 \begin{eqnarray}
 T^{l}&=&1-\frac{2 \pi i m}{p} \alpha \phi(p) \chi^{*}(p),
 \nonumber \\
@@ -68,27 +66,22 @@ T^l + T^r - T^l T^r + R^l R^r = 1.
 %
 %
 %
-%
-%
-%
-%
-%
-\section{Uniqueness of bound state}
-%
-A separable potential  can only have at most one bound state $\ket{\psi_{E}}$.
-In momentum representation,
-%
-\begin{eqnarray}
-\braket{p}{\psi_{E}}&=&\bra{p}\frac{V_{0}}{E-H_{0}}\ket{\phi}\braket{\chi}{\psi_{E}}
-\nonumber \\
-&=&\frac{M}{p^{2}-q_{B}^{2}}\braket{p}{\phi},
-\end{eqnarray}
-%
-where $M=-2 m V_{0} \braket{\chi}{\psi_{E}}$ and $q_{B}^2=2 m E<0$. Suppose there is a second bound state $\ket{\psi_{E'}}$,
-with corresponding quantities $M'$ and $q_{B'}^2$. Then,
-%
-\begin{eqnarray}
-\braket{\psi_{E'}}{\psi_{E}}&=&M M' \int_{-\infty}^\infty dp \left|\braket{p}{\phi}\right| \frac{1}{p^{2}-q_{B}^{2}}\frac{1}{p^{2}-q_{B'}^{2}}. \nonumber \\		\end{eqnarray}
-%
-Since $MM'\ne 0$ and the integral is positive the overlap cannot be zero
-so there cannot be two bound states.
+% \section{Uniqueness of bound state}
+% %
+% A separable potential  can only have at most one bound state $\ket{\psi_{E}}$.
+% In momentum representation,
+% %
+% \begin{eqnarray}
+% \braket{p}{\psi_{E}}&=&\bra{p}\frac{V_{0}}{E-H_{0}}\ket{\phi}\braket{\chi}{\psi_{E}}
+% \nonumber \\
+% &=&\frac{M}{p^{2}-q_{B}^{2}}\braket{p}{\phi},
+% \end{eqnarray}
+% %
+% where $M=-2 m V_{0} \braket{\chi}{\psi_{E}}$ and $q_{B}^2=2 m E<0$. Suppose there is a second bound state $\ket{\psi_{E'}}$,
+% with corresponding quantities $M'$ and $q_{B'}^2$. Then,
+% %
+% \begin{eqnarray}
+% \braket{\psi_{E'}}{\psi_{E}}&=&M M' \int_{-\infty}^\infty dp \left|\braket{p}{\phi}\right| \frac{1}{p^{2}-q_{B}^{2}}\frac{1}{p^{2}-q_{B'}^{2}}. \nonumber \\		\end{eqnarray}
+% %
+% Since $MM'\ne 0$ and the integral is positive the overlap cannot be zero
+% so there cannot be two bound states.
