I shortened and reunited the intros to avoid repetitions in the text.

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -168,7 +168,7 @@
 
 % ------------ PART I: NH-Devices ------------------------------------------------------------------
 \part{Non-hermitian systems and asymmetric scattering}
-\input{./Chapters/IntroductionPartI}
+% \input{./Chapters/IntroductionPartI}
 \input{./Chapters/Chapter1}    % Asymmetric scattering by non-Hermitian potentials
 \input{./Chapters/Chapter2}    % Symmetries of non-hermitian potentials
   % \input{./Chapters/ChapterSymAndInvariants}        %Invariants of non-h Hamiltonians
@@ -179,7 +179,7 @@
 
 % ------------ PART II: Heat Rectification ---------------------------------------------------------
 \part{Heat rectification in mesoscopic systems}
-\input{./Chapters/IntroductionPartII}
+% \input{./Chapters/IntroductionPartII}
 \input{./Chapters/Chapter4}    % Heat Rectification with local impurities
 \input{./Chapters/Chapter5}    % Heat Rectification in graded chains of trapped ions
 \input{./Chapters/Chapter6}    % Rectification in a minimal model
