First revision by Gonzalo of the complete thesis

--- a/Appendices/Appendix_NumericalCalculationOfTandR.tex
+++ b/Appendices/Appendix_NumericalCalculationOfTandR.tex
@@ -153,7 +153,7 @@ The Green's function allows us to solve for   $F(x)$ and $\widetilde{F}(x)$ in i
 
 \section{Asymptotic form of the solutions}
 %
-From Eq. \eqref{eqf} we find the following asymptotic forms of  $F(x)$ and $\widetilde{F}(x)$:
+From eq. \eqref{eqf} we find the following asymptotic forms of  $F(x)$ and $\widetilde{F}(x)$:
 %
 \begin{eqnarray}
 	F_{\eta}(x)&=& \begin{cases}
