--- a/Appendices/Appendix_SpectralDensity.tex
+++ b/Appendices/Appendix_SpectralDensity.tex
@@ -5,7 +5,7 @@
 \lhead{Appendix F. \emph{Complete expressions for the Spectral Density Matrix}}
 
 %
-In Section \ref{sec:lookingForR} we used the characteristic polynomial $P_{\mathbb{A}}(\lambda)$ of the dynamical matrix $\mathbb{A}$ for the calculation of the spectral density matrix. $P_{\mathbb{A}}(\lambda)$ is defined as
+In section \ref{sec:lookingForR} we used the characteristic polynomial $P_{\mathbb{A}}(\lambda)$ of the dynamical matrix $\mathbb{A}$ for the calculation of the spectral density matrix. $P_{\mathbb{A}}(\lambda)$ is defined as
 \begin{equation}
   \begin{split}
     P_{\mathbb{A}}(\lambda) &\equiv\det(\mathbb{A}-\lambda)\\
