--- a/Thesis.tex
+++ b/Thesis.tex
@@ -167,25 +167,20 @@
 \input{./Chapters/Introduction} %Introduction
 
 % ------------ PART I: NH-Devices ------------------------------------------------------------------
-\part{Non-hermitian systems and asymmetric scattering}
-% \input{./Chapters/IntroductionPartI}
+\part{Non-Hermitian systems and asymmetric scattering\label{partI}}
 \input{./Chapters/Chapter1}    % Asymmetric scattering by non-Hermitian potentials
-\input{./Chapters/Chapter2}    % Symmetries of non-hermitian potentials
-  % \input{./Chapters/ChapterSymAndInvariants}        %Invariants of non-h Hamiltonians
-  % \input{./Chapters/ChapterRealEigenValues}         %complex plane symmetries of nh Hamiltonians
-  % \input{./Chapters/ChapterDiscreteNNSymmetries}    %Discrete Hamiltonian symmetries
-\input{./Chapters/Chapter3}    % Physical Implementation of non-hermitian and non-local hamiltonians
+\input{./Chapters/Chapter2}    % Symmetries of non-Hermitian potentials S-matrix poles
+\input{./Chapters/Chapter3}    % Physical Implementation of non-Hermitian and non-local Hamiltonians
 
 
 % ------------ PART II: Heat Rectification ---------------------------------------------------------
-\part{Heat rectification in mesoscopic systems}
-% \input{./Chapters/IntroductionPartII}
+\part{Heat rectification in mesoscopic systems\label{partII}}
 \input{./Chapters/Chapter4}    % Heat Rectification with local impurities
 \input{./Chapters/Chapter5}    % Heat Rectification in graded chains of trapped ions
 \input{./Chapters/Chapter6}    % Rectification in a minimal model
 
 % ------------ CONCLUSIONS -------------------------------------------------------------------------
-\part*{Conclusions}
+\part*{Conclusions\label{partConclusions}}
 \addcontentsline{toc}{part}{Conclusions}
 \input{./Chapters/Conclusions} %Conclusions
 
